Velocity support started