@@ -5,12 +5,11 @@ import es.angelillo15.mast.api.addons.AddonsManager;
 import es.angelillo15.mast.api.addons.MAStaffAddon;
 import es.angelillo15.mast.bukkit.MAStaff;
 import lombok.SneakyThrows;
-
 import java.io.File;
-import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.Objects;
 import java.util.Properties;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
@@ -21,10 +20,11 @@ public class AddonsLoader {
         MAStaff.getPlugin().getPLogger().debug("Loading addons...");
         File addonsFolder = new File(MAStaff.getPlugin().getDataFolder() + File.separator + "addons");
         if (!addonsFolder.exists()) {
+            //noinspection ResultOfMethodCallIgnored
             addonsFolder.mkdir();
         }
 
-        for (File file : addonsFolder.listFiles()) {
+        for (File file : Objects.requireNonNull(addonsFolder.listFiles())) {
             MAStaff.getPlugin().getPLogger().debug("Loading addon " + file.getName() + "...");
 
             if(file.isFile() && file.getName().endsWith(".jar")) {
@@ -55,10 +55,11 @@ public class AddonsLoader {
                 addonDescription.setVersion(properties.getProperty("version"));
                 addonDescription.setAuthor(properties.getProperty("author"));
 
-                Class cls = new URLClassLoader(urls, MAStaff.getPlugin().getClass().getClassLoader())
+                @SuppressWarnings("resource")
+                Class<?> cls = new URLClassLoader(urls, MAStaff.getPlugin().getClass().getClassLoader())
                         .loadClass(addonDescription.getMain());
 
-                MAStaffAddon addon = (MAStaffAddon) cls.newInstance();
+                MAStaffAddon addon = (MAStaffAddon) cls.getDeclaredConstructor().newInstance();
 
                 addon.init(new File(file.getParentFile() + File.separator + addonDescription.getName()), addonDescription, MAStaff.getPlugin());
                 addon.onEnable();
